# magictaskbar-ui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
libs/slu-ipc/: Cargo.toml
libs/slu-ipc/src/: lib.rs  messages.rs
src/: Cargo.toml  taskbar_alignment_base.rs  tauri.conf.json
src/background/: app.rs  app_instance.rs  error.rs  exposed.rs  grpc_bridge.rs  hook.rs  main.rs  mod.rs  tauri_plugins.rs  webview_recovery.rs
src/background/cli/: mod.rs  self_pipe.rs  svc_pipe.rs
src/background/cli/application/: mod.rs
src/background/config/: tray_activation_rules.json
src/background/i18n/: en.yml  zh-CN.yml
src/background/modules/: mod.rs
src/background/modules/apps/: infrastructure.rs
src/background/modules/apps/application/: mod.rs  windows.rs
src/background/modules/audio/: infrastructure.rs
src/background/modules/bluetooth/: classic.rs  infrastructure.rs  low_energy.rs  mod.rs
src/background/modules/feedback/: log_collector.rs  mod.rs
src/background/modules/input/: domain.rs  mod.rs
src/background/modules/language/: infrastructure.rs  mod.rs  tsf.rs
src/background/modules/monitors/: application.rs  infrastructure.rs  mod.rs
src/background/modules/network/: infrastructure.rs
src/background/modules/notification/: application.rs  domain.rs  infrastructure.rs
src/background/modules/start/: application.rs
src/background/modules/system_settings/: application.rs  infrastructure.rs
src/background/modules/system_tray/: infrastructure.rs
src/background/resources/: cli.rs  commands.rs  emitters.rs  mod.rs
src/background/restoration_and_migrations/: mod.rs
src/background/state/: infrastructure.rs  mod.rs
src/background/state/application/: icons.rs  mod.rs  performance.rs  settings.rs  taskbar_items.rs
src/background/state/domain/: mod.rs
src/background/system/: mod.rs
src/background/utils/: constants.rs  icon_whitelist.rs  integrity.rs  mod.rs
src/background/utils/icon_extractor/: mod.rs  queue.rs
src/background/utils/lock_free/: mod.rs
src/background/widgets/: mod.rs  popup_glass_effect.rs
src/background/widgets/contextmenu/: instance.rs  mod.rs
src/background/widgets/preview/: instance.rs  mod.rs
src/background/widgets/taskbar/: cli.rs  glass_effect.rs  handler.rs  hook.rs  instance.rs  mod.rs  taskbar_items_impl.rs
src/background/widgets/toolbar/: hook.rs  mod.rs
src/background/windows_api/: app_bar.rs  device.rs  event_window.rs  hdc.rs  icon_extractor.rs  mod.rs  native_window.rs  process.rs  string_utils.rs  types.rs
src/background/windows_api/monitor/: mod.rs
src/background/windows_api/window/: cache.rs  event.rs  mod.rs
src/capabilities/: taskbar.json
src/static/: AIRecommend.xml  GameList.xml  app_notification_whitelist.yml
src/static/themes/default/: metadata.yml
src/static/widgets/: taskbar.yml
src/ui/: globals.d.ts  reduxRootState.ts
src/ui/about/: index.tsx
src/ui/check-update/: index.tsx
src/ui/check-update/public/: index.html
src/ui/contextmenu/: app.tsx  index.tsx
src/ui/contextmenu/public/: index.css
src/ui/feedback/: index.tsx  styles.css
src/ui/feedback/public/: index.html
src/ui/preview/: app.tsx  index.tsx
src/ui/preview/components/: PreviewList.tsx
src/ui/preview/public/: index.css  index.html
src/ui/recycle-bin-confirm/public/: index.html
src/ui/settings/: AppStartupControl.tsx  ThirdPartyControl.tsx  index.tsx
src/ui/settings/i18n/: index.ts
src/ui/settings/i18n/translations/: en.yml  zh-CN.yml
src/ui/settings/public/: index.html
src/ui/taskbar/: app.tsx  index.tsx
src/ui/taskbar/components/: WithContextMenu.tsx
src/ui/taskbar/i18n/: index.ts
src/ui/taskbar/i18n/translations/: en.yml  zh-CN.yml
src/ui/taskbar/modules/bar/: DockMagnifier.tsx  DraggableItem.tsx  ItemReordableList.tsx  index.tsx  menu.tsx
src/ui/taskbar/modules/item/infra/: File.tsx  Menu.tsx  RecycleBin.tsx  RecycleBinClearConfirmModal.styles.css  RecycleBinClearConfirmModal.tsx  Separator.tsx  StartMenu.tsx  SystemTray.tsx  (+3 more)
src/ui/taskbar/styles/: global.css  taskbar.css
src/ui/toolbar/: app.tsx  index.tsx
src/ui/toolbar/modules/about/: index.tsx  styles.css
src/ui/toolbar/modules/ai-recommend/: index.tsx  styles.css
src/ui/toolbar/modules/bluetooth/: index.tsx  styles.css
src/ui/toolbar/modules/check-update/: index.tsx  styles.css
src/ui/toolbar/modules/controlcenter/: index.tsx  styles.css
src/ui/toolbar/modules/date/: index.tsx  styles.css
src/ui/toolbar/modules/input-method/: index.tsx  styles.css
src/ui/toolbar/modules/main/: ContextMenu.css  ContextMenu.tsx  ItemsContainer.tsx  Toolbar.tsx
src/ui/toolbar/modules/network/: index.tsx  styles.css
src/ui/toolbar/modules/notification/: index.tsx  styles.css
src/ui/toolbar/modules/power/: index.tsx  styles.css
src/ui/toolbar/modules/power-menu/: index.tsx  styles.css
src/ui/toolbar/modules/screenshot/: index.tsx  styles.css
src/ui/toolbar/modules/shortcut/: index.tsx  styles.css
src/ui/toolbar/modules/volume/: index.tsx  styles.css
src/ui/toolbar/modules/yoyo/: index.tsx  styles.css
src/ui/toolbar/styles/: global.css  variables.css
(+87 files in other folders)
